--- a/fruits/css/fruit.css
+++ b/fruits/css/fruit.css
@@ -1,10 +1,10 @@
-@import "../css/common.css";
+@import "../../css/common.css";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:regular&display=swap);
 .sml-green {
   font-weight: 600;
   font-size: 0.75rem;
-  color: #6A983C;
-  background: #F4F8EC;
+  color: #6a983c;
+  background: #f4f8ec;
   border-radius: 12px;
   padding: 2px 6px;
   height: -webkit-max-content;
@@ -23,15 +23,16 @@
   margin-bottom: 0.875rem;
 }
 
-.def-list p, label {
+.def-list p,
+label {
   font-family: "Open Sans";
   font-weight: 400;
   font-size: 0.875rem;
 }
 
 .button {
-  background: #6A983C;
-  border: 2px solid #46760A;
+  background: #6a983c;
+  border: 2px solid #46760a;
   border-radius: 0.75rem;
   color: white;
   padding: 0.75rem 1rem;
@@ -47,11 +48,11 @@ main {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 8px 15px;
 }
 .top-body > h2 {
@@ -64,20 +65,20 @@ main {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: end;
+  -ms-flex-align: end;
+  align-items: end;
   gap: 25px;
   font-family: "Open Sans";
   font-weight: 400;
   font-size: 0.75rem;
-  color: #A9A9A9;
+  color: #a9a9a9;
 }
 .how-view p {
   cursor: pointer;
 }
 
 .tab-link svg {
-  stroke: #A9A9A9;
+  stroke: #a9a9a9;
   display: inline-block;
   position: relative;
   top: 3px;
@@ -88,8 +89,8 @@ main {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 .prod-block span {
   padding: 0px 6px;
@@ -105,13 +106,13 @@ main {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 .top-form > div {
-  border: 1.5px solid #D1D1D1;
+  border: 1.5px solid #d1d1d1;
   border-radius: 0.75rem;
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
 }
 
 .filter__radio {
@@ -128,11 +129,11 @@ main {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   position: relative;
 }
 
@@ -153,7 +154,7 @@ main {
 .fake {
   width: 1.5rem;
   height: 1.5rem;
-  border: 1.5px solid #D1D1D1;
+  border: 1.5px solid #d1d1d1;
   border-radius: 50%;
   position: absolute;
   top: -2px;
@@ -181,8 +182,8 @@ main {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 0.625rem 1rem;
   position: relative;
 }
@@ -196,7 +197,7 @@ main {
 }
 .checkbox__input:checked + .checkbox__fake {
   opacity: 1;
-  background-color: #6A983C;
+  background-color: #6a983c;
   border-color: #3e631a;
 }
 .checkbox__input:checked + .checkbox__fake::before {
@@ -207,7 +208,7 @@ main {
   font-weight: 600;
   font-size: 0.75rem;
   padding: 0 0.5rem;
-  border: 1.5px solid #D1D1D1;
+  border: 1.5px solid #d1d1d1;
   border-radius: 0.75rem;
 }
 
@@ -215,18 +216,18 @@ main {
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   left: 1rem;
   width: 1.5rem;
   height: 1.5rem;
-  border: 1.5px solid #D1D1D1;
+  border: 1.5px solid #d1d1d1;
   border-radius: 3px;
   pointer-events: none;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .checkbox__fake::before {
-  content: url(../image/check.svg);
+  content: url(../../image/check.svg);
   position: absolute;
   top: 0;
   left: 4px;
@@ -242,14 +243,14 @@ main {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding-right: 1rem;
 }
 
 .filter__select {
   padding-left: 1rem;
-  border-left: 1px solid #D1D1D1;
+  border-left: 1px solid #d1d1d1;
 }
 .filter__select select {
   background-color: inherit;
@@ -280,8 +281,8 @@ main {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   gap: 3rem;
   position: relative;
 }
@@ -289,15 +290,13 @@ main {
   .side__bar {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
   }
 }
 
 .side-category {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  
 }
 
 .side-item {
@@ -305,17 +304,15 @@ main {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 .side-item p {
   margin-right: 0.3125rem;
 }
 
 .side-brands {
-  -webkit-box-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
+  
 }
 
 .brands-item {
@@ -333,9 +330,7 @@ main {
 }
 
 .side__rating {
-  -webkit-box-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
+ 
 }
 
 input::-webkit-outer-spin-button,
@@ -345,15 +340,12 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
 
 .side__price {
   width: 250px;
-  -webkit-box-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
 }
 
 .price__slider {
@@ -365,8 +357,8 @@ input[type=number] {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   gap: 2.0625rem;
 }
 
@@ -380,7 +372,7 @@ input[type=number] {
   left: 120px;
   width: 10px;
   height: 1px;
-  background-color: #A9A9A9;
+  background-color: #a9a9a9;
 }
 
 .label__span {
@@ -389,8 +381,8 @@ input[type=number] {
 }
 
 .price__input {
-  background-color: #F9F9F9;
-  border: 1px solid #D1D1D1;
+  background-color: #f9f9f9;
+  border: 1px solid #d1d1d1;
   padding: 0.75rem 1rem;
   border-radius: 12px;
 }
@@ -405,14 +397,14 @@ input[type=number] {
   .side__buttons {
     position: absolute;
     bottom: 0;
-    right: 0;
+    right: 1.9rem;
   }
 }
 
 .button-reset {
   font-weight: 700;
   font-size: 0.9375rem;
-  color: #A9A9A9;
+  color: #a9a9a9;
   background-color: transparent;
 }
 
@@ -426,6 +418,7 @@ input[type=number] {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
   gap: 2rem;
+  justify-items: center;
 }
 
 .rating {
@@ -433,12 +426,12 @@ input[type=number] {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 .rating__item {
@@ -454,11 +447,11 @@ input[type=number] {
   color: #e9da05;
 }
 
-.rating[data-total-value="1"] .rating__item:nth-child(n+5),
-.rating[data-total-value="2"] .rating__item:nth-child(n+4),
-.rating[data-total-value="3"] .rating__item:nth-child(n+3),
-.rating[data-total-value="4"] .rating__item:nth-child(n+2),
-.rating[data-total-value="5"] .rating__item:nth-child(n+1) {
+.rating[data-total-value="1"] .rating__item:nth-child(n + 5),
+.rating[data-total-value="2"] .rating__item:nth-child(n + 4),
+.rating[data-total-value="3"] .rating__item:nth-child(n + 3),
+.rating[data-total-value="4"] .rating__item:nth-child(n + 2),
+.rating[data-total-value="5"] .rating__item:nth-child(n + 1) {
   color: #e9da05;
 }
 
@@ -468,8 +461,8 @@ input[type=number] {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   gap: 2rem;
 }
 
@@ -479,10 +472,10 @@ input[type=number] {
   -ms-grid-columns: 16.875rem 2rem 1fr;
   grid-template-columns: 16.875rem 1fr;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 1rem;
-  border: 1px solid #D1D1D1;
+  border: 1px solid #d1d1d1;
   gap: 2rem;
   border-radius: 0.75rem;
 }
@@ -495,12 +488,12 @@ input[type=number] {
 
 .line-image {
   border-radius: 12px;
+  height: 100%;
 }
 .line-image img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-radius: 0.75rem;
 }
 
@@ -510,8 +503,8 @@ input[type=number] {
   display: flex;
   width: 100%;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   gap: clamp(2rem, 5vw, 6rem);
 }
 
@@ -529,14 +522,14 @@ input[type=number] {
   font-family: "Open Sans";
   font-weight: 400;
   font-size: 0.875rem;
-  color: #A9A9A9;
+  color: #a9a9a9;
   margin-bottom: 0.75rem;
 }
 .left__decriptions ul li:last-of-type {
   margin-bottom: 0;
 }
 .left__decriptions ul li span {
-  color: #6A983C;
+  color: #6a983c;
 }
 
 .line-right .best__number {
@@ -550,7 +543,7 @@ input[type=number] {
   font-family: "Open Sans";
   font-weight: 400;
   font-size: 0.875rem;
-  color: #A9A9A9;
+  color: #a9a9a9;
   margin-bottom: 1.5rem;
 }
 .right-delivery span {
@@ -559,7 +552,7 @@ input[type=number] {
 
 .right-wish {
   padding: 0.375rem 0.75rem;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   border-radius: 0.75rem;
   font-weight: 700;
   font-size: 15px;
@@ -572,12 +565,12 @@ input[type=number] {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   padding: 1rem;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .page__block {
@@ -585,15 +578,15 @@ input[type=number] {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
 }
 .page__block P {
   margin-right: 0.5rem;
   font-family: "Open Sans";
   font-weight: 400;
   font-size: 0.875rem;
-  color: #A9A9A9;
+  color: #a9a9a9;
 }
 
 .page-number {
@@ -610,7 +603,7 @@ input[type=number] {
 
 .more__amount {
   font-size: 0.75rem;
-  color: #A9A9A9;
+  color: #a9a9a9;
 }
 .more__amount span {
   display: inline-block;
@@ -618,8 +611,8 @@ input[type=number] {
   font-weight: 600;
   font-size: 0.75rem;
   margin-right: 0.25rem;
-  color: #6A983C;
-  background: #F4F8EC;
+  color: #6a983c;
+  background: #f4f8ec;
   border-radius: 12px;
 }
 
@@ -631,5 +624,5 @@ input[type=number] {
   color: #151515;
 }
 .green svg {
-  stroke: #6A983C;
+  stroke: #6a983c;
 }
