--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,4 @@
-@import url(normalize.css);
+
 $clr-green:#6A983C;
 $font-fam:'Open Sans';
 $clr-smll-text:#575757;
@@ -30,6 +30,9 @@ footer {
       font-weight: 400;
       font-size: 14px;
       color: $clr-green;
+      &:hover{
+         text-decoration: underline;
+      }
    }
 }
 /*-------------------------------------------------------------------------------------------------*/
@@ -55,6 +58,11 @@ footer {
       padding: 4px 10px;
       background-color: $clr--f5f5;
       border-radius: 0.75rem;
+      transition: .3s;
+
+      &:hover{
+         background-color: #9b9898;
+      }
    }
 }
 
