--- a/scss/common.scss
+++ b/scss/common.scss
@@ -10,13 +10,13 @@
    display: flex;
    flex-direction: column;
    position: relative;
+   max-width: 270px;
 }
 .best__image {
    margin-bottom: 1rem;
 
    & img{
       width: 100%;
-      object-fit: cover;
    }
 }
 .discount{
@@ -69,8 +69,13 @@
    font-size: 0.9375rem;
    color: #ffff;
    padding: 0.4063rem 0.75rem;
-   background: $clr-green;
+   background-color: $clr-green;
    border: 2px solid #46760A;
    border-radius: 12px;
    display: inline-block;
+   transition: .3s;
+
+   &:hover{
+      background-color: #5da10a;
+   }
 }
