--- a/scss/main.scss
+++ b/scss/main.scss
@@ -165,7 +165,7 @@ $pad-top-bot: clamp(1rem, 4vw,4rem);
       line-height: 1.5;
       grid-template-columns: repeat(auto-fill,minmax(16rem,1fr));
       gap: 2rem;
-
+      justify-items: center;
       & .active{
          display: block;
       }
@@ -290,6 +290,7 @@ $pad-top-bot: clamp(1rem, 4vw,4rem);
       line-height: 1.5;
       grid-template-columns: repeat(auto-fill,minmax(16rem,1fr));
       gap: 2rem;
+      justify-items: center;
    }
 
    /*---------------------------------blog----------------------------------------------------------------*/
@@ -299,7 +300,7 @@ $pad-top-bot: clamp(1rem, 4vw,4rem);
    }
    .blog__content {
       display: grid;
-      grid-template-columns: 29.3125rem repeat(2,1fr);
+      grid-template-columns: 29.3rem repeat(2,1fr);
       gap: 1.9688rem;
     
          @media (max-width: 1140px){
@@ -367,7 +368,9 @@ $pad-top-bot: clamp(1rem, 4vw,4rem);
      display: flex;
      flex-direction: column;
      align-items: center;
-      
+      img{
+         max-width: 100%;
+      }
      @media (max-width: 800px){
       grid-row: 2;
    }
