--- a/fruits/css/fruit.css
+++ b/fruits/css/fruit.css
@@ -95,7 +95,12 @@ main {
 .prod-block span {
   padding: 0px 6px;
 }
-
+@media (max-width: 650px){
+  .top-body{
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
 /*-----------------------------filter--------------------------------------------------------------------*/
 .form__container {
   padding: 1rem;
@@ -286,14 +291,10 @@ main {
   gap: 3rem;
   position: relative;
 }
-@media (max-width: 1023px) {
-  .side__bar {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-  }
+.side__bar-open{
+  display: none;
 }
+
 
 .side-category {
   
@@ -393,13 +394,7 @@ input[type="number"] {
   display: flex;
   gap: 2.875rem;
 }
-@media (max-width: 1023px) {
-  .side__buttons {
-    position: absolute;
-    bottom: 0;
-    right: 1.9rem;
-  }
-}
+
 
 .button-reset {
   font-weight: 700;
@@ -411,7 +406,85 @@ input[type="number"] {
 .body-content {
   display: none;
 }
+@media (max-width: 1023px) {
+  .side__bar {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+  .side__buttons {
+    position: absolute;
+    bottom: 0;
+    right: 1.9rem;
+  }
+}
+@media (max-width: 870px){
+  .side__bar{
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    bottom: 0;
+    width: 400px;
+    z-index: 100;
+    padding: 1rem;
+    padding-right: 2rem;
+    background-color: hsl(192, 85%, 35%);
+    overflow: auto;
+    transition: 0.4s;
+  }
+  .side__bar.show-filter{
+    right: 0;
+  }
 
+  .side__bar-open{
+    z-index: 5;
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+    padding: 15px 20px;
+    justify-self: flex-end;
+    background-color: #6a983c;
+    border: 2px solid #46760a;
+    border-radius: 12px;
+  }
+  .side__bar-open span,
+  .side__bar-open::before,
+  .side__bar-open::after{
+     left: 50%;
+     transform: translateX(-50%);
+     position: absolute;
+     height: 3px;
+     width: 30px;
+     transition: all 0.3s ease 0s;
+     background-color: #ffffff;
+  }
+  .side__bar-open::before,
+  .side__bar-open::after{
+    content: '';
+  }
+  .side__bar-open::before{
+    top: 4px;
+  }
+  .side__bar-open::after{
+    bottom: 4px;
+  }
+  .side__bar-open span{
+    top: 50%;
+    transform: translate(-50%,-50%);
+  }
+  .side__buttons{
+    position: static;
+  }
+}
+@media (max-width: 400px){
+  .side__bar{
+    width: 100%;
+  }
+}
 /*-------------------------------------------------------------------------------------------------*/
 .grid-content {
   display: -ms-grid;
@@ -483,6 +556,8 @@ input[type="number"] {
   .line-item {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+    max-width: 400px;
+    align-self: center;
   }
 }
 
@@ -558,7 +633,14 @@ input[type="number"] {
   font-size: 15px;
   color: #151515;
 }
-
+@media (max-width: 450px){
+  .line__body{
+    gap: 1rem;
+  }
+  .left__decriptions{
+    gap: 1rem;
+  }
+}
 /*---------------------------more----------------------------------------------------------------------*/
 .more {
   display: -webkit-box;
@@ -625,4 +707,10 @@ input[type="number"] {
 }
 .green svg {
   stroke: #6a983c;
+}
+
+@media (max-width: 766px){
+  .more .best__button{
+    display: none;
+  }
 }
