--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -173,10 +173,7 @@ $clr--f9f9:#F9F9F9;
    position: absolute;
    bottom: -4px;
    left: -5px;
-   width: 1rem;
-   height: 1rem;
-   padding-top: 3px;
-   padding-left: 4px;
+   padding: 0.2rem 0.3rem;
    font-weight: 600;
    font-size: 0.75rem;
    color: #fff;
