--- a/scss/common.scss
+++ b/scss/common.scss
@@ -79,3 +79,36 @@
       background-color: #5da10a;
    }
 }
+
+.breadcrumbs{
+   padding-top: 1rem;
+   padding-bottom: 1rem;
+ }
+ .breadcrumbs__list{
+   display: flex;
+   font-family: 'Open Sans';
+ }
+ .breadcrumbs__list li{
+   position: relative;
+ }
+ .breadcrumbs__list li + li{
+   text-decoration: underline;
+ }
+ .breadcrumbs__list li + li::before{
+   content: '/';
+   position: absolute;
+   top: 50%;
+   left: -12px;
+   transform: translateY(-50%);
+   font-size:1rem;
+   color: #D1D1D1;
+ }
+ .breadcrumbs__list li:not(:last-child){
+   margin-right: 1.25rem;
+ }
+ .breadcrumbs__list li a{
+   
+   font-weight: 400;
+   font-size: 0.75rem;
+   color: #151515;
+ }
