--- a/chechout/scss/checkout.scss
+++ b/chechout/scss/checkout.scss
@@ -1,94 +1,93 @@
 @import "../../scss/common.scss";
-.main-text{
-   color: #A9A9A9;
-   font-family: 'Open Sans';
-   font-weight: 400;
-   font-size: 0.875rem;
+.main-text {
+  color: #a9a9a9;
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-size: 0.875rem;
 }
-.section-head{
-   display: flex;
-   justify-content: space-between;
-   align-items: flex-end;
-   margin-bottom: 2rem;
-   p{
+.section-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 2rem;
+  p {
+    @extend .main-text;
+    font-size: 12px;
+  }
+}
+.section-title {
+  span {
+    @extend .main-text;
+    font-size: 12px;
+    display: block;
+    margin-top: 10px;
+  }
+  font-weight: 600;
+  font-size: 1.4rem;
+}
+.general-inputs {
+  display: flex;
+  flex-direction: column;
+  label {
+    font-weight: 600;
+    font-size: 12px;
+    margin-bottom: 0.3rem;
+    display: block;
+  }
+  input,
+  textarea {
+    width: 100%;
+    padding: 11px 1rem;
+    background-color: #f9f9f9;
+    border: 1px solid #d1d1d1;
+    border-radius: 12px;
+    &::placeholder {
       @extend .main-text;
       font-size: 12px;
-   }
-}
-.section-title{
-   span{
-      @extend .main-text;
-      font-size: 12px;
-      display: block;
-      margin-top: 10px;
-   }
-   font-weight: 600;
-   font-size: 1.4rem;
-}
-.general-inputs{
-   display: flex;
-   flex-direction: column;
-   label{
-      font-weight: 600;
-      font-size: 12px;
-      margin-bottom: 0.3rem;
-      display: block;
-   }
-   input,textarea{
-      width: 100%;
-      padding: 11px 1rem;
-      background-color: #F9F9F9;
-      border: 1px solid #D1D1D1;
-      border-radius: 12px;
-      &::placeholder{
-         @extend .main-text;
-         font-size: 12px;
-      }
-   }
+    }
+  }
 }
 textarea {
-   resize: none;
+  resize: none;
 }
 /*-------------------------------------------------------------------------------------------------*/
 .checkout__body {
-   padding: 1rem 0 2rem;
-   .container{
-      display: grid;
-      grid-template-columns: minmax(580px, 670px) 1fr;
-      gap: 32px;
-   }
-   
+  padding: 1rem 0 2rem;
+  .container {
+    display: grid;
+    grid-template-columns: minmax(580px, 670px) 1fr;
+    gap: 32px;
+  }
 }
 .checkout__form > div:not(:last-child) {
-   margin-bottom: 4rem;
+  margin-bottom: 4rem;
 }
 .billing__info {
-   
 }
 .billing {
 }
 .buyer__info {
 }
 .buyer__info-list {
-   display: grid;
-   grid-template-columns: repeat(2,1fr);
-   gap: 2rem;
-   margin-bottom: 2rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  margin-bottom: 2rem;
 }
 .billing__ship {
-   display: flex;
-   align-items: center;
-   padding: 13px 1rem;
-   @extend .main-text;
-   color: #151515;
-   font-size: 0.875rem;
-   background-color: #F9F9F9;
-   border: 1px solid #D1D1D1;
-   border-radius: 12px;
-   width: max-content;
-   input{
-      margin-right: 10px;
-   }
+  display: flex;
+  align-items: center;
+  padding: 13px 1rem;
+  @extend .main-text;
+  color: #151515;
+  font-size: 0.875rem;
+  background-color: #f9f9f9;
+  border: 1px solid #d1d1d1;
+  border-radius: 12px;
+  width: max-content;
+  input {
+    margin-right: 10px;
+  }
 }
 /*-------------------------------------------------------------------------------------------------*/
 .billing-method {
@@ -96,153 +95,150 @@ textarea {
 .method {
 }
 
-.method__items { 
-   
+.method__items {
 }
 .method-item {
-   display: grid;
-   grid-template-columns: repeat(3,1fr);
-   align-items: center;
-   background-color: #F9F9F9;
-   border: 1px solid #D1D1D1;
-   border-radius: 12px;
-   padding: 0.75rem 1rem;
-   position: relative;
-   font-weight: 600;
-   &:not(:last-child){
-      margin-bottom: 1rem;
-   }
-   img{
-      justify-self: end;
-   }
-      input{
-         width: 1rem;
-         height: 1rem;
-      }
-      label{
-         position: absolute;
-         top: 50%;
-         left: 3rem;
-         transform: translateY(-50%);
-         width: 90%;
-      }
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  background-color: #f9f9f9;
+  border: 1px solid #d1d1d1;
+  border-radius: 12px;
+  padding: 0.75rem 1rem;
+  position: relative;
+  font-weight: 600;
+  &:not(:last-child) {
+    margin-bottom: 1rem;
+  }
+  img {
+    justify-self: end;
+  }
+  input {
+    width: 1rem;
+    height: 1rem;
+  }
+  label {
+    position: absolute;
+    top: 50%;
+    left: 3rem;
+    transform: translateY(-50%);
+    width: 90%;
+  }
 }
-.radio{
-  
+.radio {
 }
-.additional{
-   span{
-      color: #6A983C;
-   }
+.additional {
+  span {
+    color: #6a983c;
+  }
 }
 
 /*-------------------------------------------------------------------------------------------------*/
-.payment{
+.payment {
 }
 .payment__items {
-   display: flex;
-   flex-direction: column;
-   gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .payment__item {
-   border: 1px solid #D1D1D1;
-   border-radius: 12px;
-   padding: 1rem;
+  border: 1px solid #d1d1d1;
+  border-radius: 12px;
+  padding: 1rem;
 }
 .payment__name {
-   display: flex;
-   align-items: center;
-   position: relative;
+  display: flex;
+  align-items: center;
+  position: relative;
 
-   label{
-      position: absolute;
-      top: 50%;
-      left: 0;
-      transform: translateY(-50%);
-      width: 90%;
-      line-height: 50px;
-      padding-left: 2rem;
-   }
-   img{
-      margin-left: auto;
-      display: inline-block;
-   }
+  label {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    width: 90%;
+    line-height: 50px;
+    padding-left: 2rem;
+  }
+  img {
+    margin-left: auto;
+    display: inline-block;
+  }
 }
 
-.card-number{
-   margin-bottom: 2rem;
+.card-number {
+  margin-bottom: 2rem;
 }
-.card-holder{
-   display: grid;
-   grid-template-columns: minmax(250px,350px) 1fr 1fr;
-   gap: 1rem;
-   li:first-of-type{
-      margin-right: 1rem;
-   }
+.card-holder {
+  display: grid;
+  grid-template-columns: minmax(250px, 350px) 1fr 1fr;
+  gap: 1rem;
+  li:first-of-type {
+    margin-right: 1rem;
+  }
 }
 
-.payment__body{
-   display: none;
+.payment__body {
+  display: none;
 
-    &.open-payment{
-       display: block;
-       margin-top: 2rem;
-    }
+  &.open-payment {
+    display: block;
+    margin-top: 2rem;
+  }
 }
 
 /*-------------------------------------------------------------------------------------------------*/
-.confirmation{
-   margin-bottom: 2rem !important;
+.confirmation {
+  margin-bottom: 2rem !important;
 }
-.confirmation-checkbox{
-   display: flex;
-   align-items: center;
-   padding: 11px 1rem;
-   background-color: #F9F9F9;
-   border: 1px solid #D1D1D1;
-   border-radius: 12px;
-   width: max-content;
-   input{
-      width: 1.5rem;
-      height: 1.5rem;
-      margin-right: 10px;
-      
-   }
-   label{
-      @extend .main-text;
-      color: #151515;
-   }
-   &:not(:last-child){
-      margin-bottom: 1rem;
-   }
+.confirmation-checkbox {
+  display: flex;
+  align-items: center;
+  padding: 11px 1rem;
+  background-color: #f9f9f9;
+  border: 1px solid #d1d1d1;
+  border-radius: 12px;
+  width: max-content;
+  input {
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-right: 10px;
+  }
+  label {
+    @extend .main-text;
+    color: #151515;
+  }
+  &:not(:last-child) {
+    margin-bottom: 1rem;
+  }
 }
 
-.form-button{
-   padding: 1rem 3rem;
-   margin-bottom: 2rem;
+.form-button {
+  padding: 1rem 3rem;
+  margin-bottom: 2rem;
 }
 /*-------------------------------------------------------------------------------------------------*/
-.secure{
-   max-width: 13.3rem;
-   &::before{
-      content: url(../image/logos/security.svg);
-      display: block;
-      margin-bottom: 0.8rem;
-   }
-   h5{
-      font-weight: 600;
-      font-size: 12px;
-      margin-bottom: 0.6rem;
-   }
-   p{
-      @extend .main-text;
-   }
+.secure {
+  max-width: 13.3rem;
+  &::before {
+    content: url(../image/logos/security.svg);
+    display: block;
+    margin-bottom: 0.8rem;
+  }
+  h5 {
+    font-weight: 600;
+    font-size: 12px;
+    margin-bottom: 0.6rem;
+  }
+  p {
+    @extend .main-text;
+  }
 }
 /*--------------------------footer-----------------------------------------------------------------------*/
-footer{
-   .container{
-      p{
-         font-family: 'Open Sans';
-      }
-   }
+footer {
+  .container {
+    p {
+      font-family: "Open Sans";
+    }
+  }
 }
