--- a/chechout/scss/checkout.scss
+++ b/chechout/scss/checkout.scss
@@ -35,7 +35,8 @@
     display: block;
   }
   input,
-  textarea {
+  textarea,
+  select {
     width: 100%;
     padding: 11px 1rem;
     background-color: #f9f9f9;
@@ -57,13 +58,13 @@ textarea {
     display: grid;
     grid-template-columns: minmax(580px, 670px) 1fr;
     gap: 32px;
-    @media screen and (max-width:70.625rem) {
-      grid-template-columns:1fr;
-      .aside-order{
-        grid-row-start:1;
+    @media screen and (max-width: 70.625rem) {
+      grid-template-columns: 1fr;
+      .aside-order {
+        grid-row-start: 1;
       }
-      .buyer__info-list{
-        grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
+      .buyer__info-list {
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
       }
     }
   }
@@ -97,6 +98,24 @@ textarea {
   input {
     margin-right: 10px;
   }
+}
+
+.select2-container--default .select2-selection--single {
+  width: 100% !important;
+  background-color: #f9f9f9;
+  border: 1px solid #d1d1d1;
+  border-radius: 12px;
+}
+.select2 .select2-container .select2-container--default {
+  width: 100% !important;
+  height: 100% !important;
+}
+.selection {
+  height: 100% !important;
+}
+.select2-selection__placeholder {
+  @extend .main-text;
+  font-size: 12px;
 }
 /*-------------------------------------------------------------------------------------------------*/
 .billing-method {
@@ -244,21 +263,19 @@ textarea {
   }
 }
 /*-------------------------------------------------------------------------------------------------*/
-.card__item:nth-child(1){
-
-  &::before{
-     content: url(../../image/best/01.svg);
+.card__item:nth-child(1) {
+  &::before {
+    content: url(../../image/best/01.svg);
   }
 }
-.card__item:nth-child(2){
-  &::before{
-     content: url(../../image/best/02.svg);
-
+.card__item:nth-child(2) {
+  &::before {
+    content: url(../../image/best/02.svg);
   }
 }
-.card__item:nth-child(3){
-  &::before{
-     content: url(../../image/best/03.svg);
+.card__item:nth-child(3) {
+  &::before {
+    content: url(../../image/best/03.svg);
   }
 }
 .rating {
@@ -269,34 +286,34 @@ textarea {
 .rating__item {
   font-size: 1.5rem;
   cursor: pointer;
-  transition: .3s;
- color: grey;
+  transition: 0.3s;
+  color: grey;
 }
 .rating__item:hover,
-.rating__item:hover ~ .rating__item{
+.rating__item:hover ~ .rating__item {
   color: #e9da05;
 }
 .rating[data-total-value="1"] .rating__item:nth-child(n + 5),
 .rating[data-total-value="2"] .rating__item:nth-child(n + 4),
 .rating[data-total-value="3"] .rating__item:nth-child(n + 3),
 .rating[data-total-value="4"] .rating__item:nth-child(n + 2),
-.rating[data-total-value="5"] .rating__item:nth-child(n + 1){
+.rating[data-total-value="5"] .rating__item:nth-child(n + 1) {
   color: #e9da05;
 }
 .aside-order {
-  border: 1px solid #D1D1D1;
-  border-radius: 12px;  
+  border: 1px solid #d1d1d1;
+  border-radius: 12px;
   padding: 2.2rem 1rem;
   height: max-content;
-    .modal-card{
-      justify-content: space-between;
-    }
+  .modal-card {
+    justify-content: space-between;
+  }
 
-  & > p{
-    font-family: 'Open Sans';
+  & > p {
+    font-family: "Open Sans";
     font-weight: 400;
     font-size: 12px;
-    color: #A9A9A9;
+    color: #a9a9a9;
     margin-bottom: 2.5rem;
   }
 }
@@ -310,39 +327,39 @@ textarea {
 .bottom-total__price {
   width: 100%;
   margin-bottom: 2rem;
-  tbody{
+  tbody {
     display: flex;
     flex-direction: column;
     gap: 1rem;
   }
-  tr{
+  tr {
     display: flex;
     justify-content: space-between;
     font-weight: 600;
-    font-size: 12px;  
+    font-size: 12px;
   }
 }
-.promo-form{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding: 11px 1rem;
-    background-color: #f9f9f9;
-    border: 1px solid #d1d1d1;
-    border-radius: 12px;
-    margin-bottom: 2.5rem;
-  input{
+.promo-form {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 11px 1rem;
+  background-color: #f9f9f9;
+  border: 1px solid #d1d1d1;
+  border-radius: 12px;
+  margin-bottom: 2.5rem;
+  input {
     background-color: transparent;
     &::placeholder {
       @extend .main-text;
     }
   }
-  button{
+  button {
     font-weight: 700;
     font-size: 1rem;
     background-color: transparent;
   }
-  label{
+  label {
     display: none;
   }
 }
@@ -350,23 +367,23 @@ textarea {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  p:has(span){
+  p:has(span) {
     font-size: 12px;
     font-weight: 600;
   }
-  p span{
+  p span {
     display: block;
     margin-top: 10px;
-    font-family: 'Open Sans';
+    font-family: "Open Sans";
     font-weight: 400;
     font-size: 12px;
-    color: #6A983C;
+    color: #6a983c;
   }
 }
 .full-price {
   font-weight: 600;
   font-size: 1.6rem;
-  color: #6A983C;
+  color: #6a983c;
 }
 
 /*--------------------------footer-----------------------------------------------------------------------*/
